fix overflow scroll (I think) and blockquote styling

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -114,7 +114,7 @@ article, .header, nav, footer {
 }
 
 a {
-  color: #1e347b;
+  color: #1330c2;
   text-decoration: none;
 }
 a:hover {
@@ -136,6 +136,7 @@ blockquote {
   border-left: 5px solid #eeeeee;
 }
 blockquote p {
+	padding-left: 20px;
 }
 blockquote small {
 }
@@ -144,19 +145,18 @@ blockquote small:before {
 }
 
 code {
-  color: #d14;
+  color: #186610;
   font-family: "Source Code Pro", "Courier New", monospace;
 	font-size: 95%;
   border: 0;
 }
 pre {
 	padding: 10px;
-  display: block;
   background-color: #f5f5f5;
 	border-radius: 10px;
 	box-shadow: -2px -2px 2px 2px #888;
-  white-space: pre;
 	overflow: auto;
+	width: auto;
 }
 
 nav {
